# auxiliar

./: README.md  pyproject.toml  test
src/auxiliar/: __init__.py
tests/: test_all.py
